--- a/MediaQuerys/style.css
+++ b/MediaQuerys/style.css
@@ -3,7 +3,7 @@
 {
     body
     {
-        background: blue;
+        background: green;
     }
 }
 /*tablet*/
@@ -11,7 +11,7 @@
 {
     body
     {
-        background: green;
+        background: white;
     }
 }
 /*desktop*/
