--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -42,7 +42,8 @@ body
 }
 .gallery
 {
-    width:200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
+    margin-left: -50px;
     position:relative;
 }
