--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,3 +1,16 @@
+#imageDescription
+{
+    width: 100%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+#skillTitle
+{
+    width: 100vw;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+}
 #jobTitle
 {
     color:blue;
@@ -51,4 +64,14 @@ body
     height: 150px;
     margin-left: -50px;
     position:relative;
+    /*left fixes the offset to make it centered on the website*/
+    left: 25px;
+}
+p
+{
+    font-family: 'Ubuntu', sans-serif;
+}
+h1
+{
+    font-family: 'Ubuntu', sans-serif;
 }
