--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -51,12 +51,13 @@ body
 {
     margin: 0;
     background-color: #1e88e5;
-    
 }
 #portfolio
 {
     display: flex;
     justify-content: center;
+    align-items: center;
+    background-color: black;
 }
 .gallery
 {
