--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,9 +1,17 @@
 #imageDescription
 {
-    width: 100%;
+    background-color: #5d5d5d;
+    width: 30%;
     text-align: center;
+    margin-left:1.5%;
+    margin-right: 1.5%;
+    margin-bottom: 1.5%;
+    margin-top: 1.5%;
+    float:left;
+    /*
     margin-left: auto;
     margin-right: auto;
+    */
 }
 #skillTitle
 {
