--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,12 +1,24 @@
+#nameOfImage
+{
+    color:white;
+}
+#descriptionText
+{
+    color:white;
+}
+#skillTitle
+{
+    color:white;
+}
 #imageDescription
 {
-    background-color: #5d5d5d;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px;
+    background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
+    /*background-color: #5d5d5d;*/
     width: 30%;
     text-align: center;
-    margin-left:1.5%;
-    margin-right: 1.5%;
-    margin-bottom: 1.5%;
-    margin-top: 1.5%;
+    margin: 1.5%;
     float:left;
     /*
     margin-left: auto;
