--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,24 +1,22 @@
-#nameOfImage
+.nameOfImage
 {
     color:white;
 }
-#descriptionText
+.descriptionText
 {
     color:white;
 }
-#skillTitle
+.imageDescription
 {
-    color:white;
-}
-#imageDescription
-{
+    height: 200px;
     border-radius: 10px;
     box-shadow: 1px 1px 5px;
+    padding:.5%;
     background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
     /*background-color: #5d5d5d;*/
     width: 30%;
     text-align: center;
-    margin: 1.5%;
+    margin: 1%;
     float:left;
     /*
     margin-left: auto;
@@ -27,13 +25,16 @@
 }
 #skillTitle
 {
+    color:white;
     width: 100vw;
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
 }
 #jobTitle
 {
-    color:blue;
+    color:white;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
 }
 #menuBar
 {
@@ -45,13 +46,7 @@
     background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
     border-top:20px;
     border-bottom: 10px;
-    /*
-background: #484848;
-background: -moz-linear-gradient(top, #484848 0%, #8c8c8c 50%, #484848 100%);
-background: -webkit-linear-gradient(top, #484848 0%,#8c8c8c 50%,#484848 100%);
-background: linear-gradient(to bottom, #484848 0%,#8c8c8c 50%,#484848 100%); 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#484848', endColorstr='#484848',GradientType=0 );
-    */
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .menuBarItem
