--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,3 +1,50 @@
+.imageAndDescription
+{
+    display: flex;
+    align-content: flex-start;
+}
+.imageAndDescription img
+{
+    width: 200px;
+    height: 200px;
+}
+#homepage p
+{
+    text-align: center;
+    color:white;
+    margin-bottom: 100px;
+}
+#jobTitle
+{
+    color:white;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+}
+#homepage
+{
+    /*
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
+    height: 1fr;
+    */
+    margin:auto;
+    width: 90vw;
+    border-radius: 50px;
+    background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
+}
+#selfPortrait
+{
+    display: block;
+    margin:auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
+    border-style:solid;
+    border-color:black;
+    border-width: 1px;
+}
 .nameOfImage
 {
     color:white;
@@ -12,6 +59,7 @@
     border-radius: 10px;
     box-shadow: 1px 1px 5px;
     padding:.5%;
+    position:absolute;
     background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
     /*background-color: #5d5d5d;*/
     width: 30%;
@@ -29,12 +77,6 @@
     width: 100vw;
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
-}
-#jobTitle
-{
-    color:white;
-    font-family: 'Ubuntu', sans-serif;
-    text-align: center;
 }
 #menuBar
 {
