--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,3 +1,5 @@
+@media (min-width:1080px)
+{
 #contactMe
 {
     text-align: center;
@@ -132,6 +134,7 @@ body
     align-items: center;
     background-color: black;
 }
+
 .gallery
 {
     width: 150px;
@@ -150,4 +153,168 @@ h1
 {
     font-family: 'Ubuntu', sans-serif;
     color:white;
+}
+}
+@media (max-width: 1080px)
+{
+	#contactMe
+{
+    text-align: center;
+}
+#contactMe text
+{
+    width: 300px;
+}
+#contactMe textarea
+{
+    
+    width: 500px;
+    height: 300px;
+}
+#allImagesAndDescriptions
+{
+	display:flex;
+	flex-direction: column;
+	align-items:center;
+}
+.imageAndDescription
+{
+	text-align:center;
+}
+
+.imageAndDescription img
+{
+	width: 200px;
+	height: 200px;
+}
+#homepage p
+{
+    text-align: center;
+    color:white;
+    margin-bottom: 100px;
+}
+#jobTitle
+{
+    color:white;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+}
+#homepage
+{
+    /*
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
+    height: 1fr;
+    */
+    margin:auto;
+    width: 90vw;
+    border-radius: 50px;
+    background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
+}
+#selfPortrait
+{
+    display: block;
+    margin:auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
+    border-style:solid;
+    border-color:black;
+    border-width: 1px;
+}
+.nameOfImage
+{
+    color:white;
+}
+.descriptionText
+{
+    color:white;
+}
+.imageDescription
+{
+    display: block;
+    align-self: center;
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px;
+    padding:.5%;
+    background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
+    /*background-color: #5d5d5d;*/
+    width: 30%;
+    margin: auto;
+    margin-top: 1%;
+    text-align: center;
+    /*margin: 1%;*/
+    /*
+    margin-left: auto;
+    margin-right: auto;
+    */
+}
+#skillTitle
+{
+    color:white;
+    width: 100vw;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+}
+#menuBar
+{
+    display: flex;
+    position:static;
+    width:100vw;
+    height: 50px;
+    background: rgb(72,72,72);
+    background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
+    border-top:20px;
+    border-bottom: 10px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.menuBarItem
+{
+    text-decoration: none;
+    color:white;
+    padding-left:20px;
+    padding-right:20px;
+    padding-top: 15px;
+    padding-bottom:15px;
+}
+.menuBarItem:hover
+{
+    background-color: #6ab7ff;
+}
+body
+{
+    margin: 0;
+    background-color: #1e88e5;
+}
+#portfolio
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+.gallery
+{
+    width: 50px;
+    height: 50px;
+    margin-left: -50px;
+    position:relative;
+    /*left fixes the offset to make it centered on the website*/
+    left: 25px;
+}
+p
+{
+    font-family: 'Ubuntu', sans-serif;
+    color:white;
+}
+h1
+{
+    font-family: 'Ubuntu', sans-serif;
+    color:white;
+}
 }
