--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,5 +1,9 @@
 @media (min-width:1080px)
 {
+#sendButton
+{
+    width:500px;    
+}
 #awardsPage
 {
     text-align: center;
@@ -177,6 +181,10 @@ h1
 
 @media (max-width: 1080px)
 {
+#sendButton
+{
+    width:350px;    
+}
 #awardsPage
 {
     text-align: center;
