--- a/PortfolioSite/ActualSite/style.css
+++ b/PortfolioSite/ActualSite/style.css
@@ -1,4 +1,4 @@
-@media (min-width:1080px)
+@media (min-width:1081px)
 {
 #sendButton
 {
@@ -145,6 +145,7 @@
 body
 {
     margin: 0;
+    padding:0;
     background-color: #1e88e5;
 }
 #portfolio
@@ -183,26 +184,27 @@ h1
 {
 #sendButton
 {
-    width:350px;    
+    width:300px;    
 }
 #awardsPage
 {
     text-align: center;
     margin:auto;
-    width: 90vw;
-    border-radius: 50px;
+    min-width: 250px;
+    width: 350px;
+    border-radius: 30px;
     background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
 }
 .certificate
 {
-    width:399px;
-    height:300px;
+    width:333px;
+    height:250px;
 }
 #contactMe
 {
     margin:auto;
     border-radius: 50px;
-    width: 400px;
+    width: 350px;
     height: 700px;
     background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
     text-align: center;
@@ -214,7 +216,7 @@ h1
 #contactMe textarea
 {
     
-    width: 350px;
+    width: 300px;
     height: 350px;
 }
 #allImagesAndDescriptions
@@ -309,7 +311,7 @@ h1
     display: flex;
     position:static;
     justify-content: center;
-    width:100vw;
+    width:100%;
     height: 50px;
     background: rgb(72,72,72);
     background: linear-gradient(180deg, rgba(72,72,72,1) 0%, rgba(126,126,126,1) 100%);
@@ -334,6 +336,7 @@ h1
 body
 {
     margin: 0;
+    padding:0;
     background-color: #1e88e5;
 }
 #portfolio
